added starting files.

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,6 @@
 weekOne/Lab1.pdf
 weekTwo/Lab2.pdf
+weekFive/3D Graphics Intro.pdf
+weekFive/3d JavaScript Libraries.pdf
+weekFive/Lab 5 - Introduction to 3D.pdf
+weekFive/ThreeJS Tutorial.pdf
